# mpltable

./: pyproject.toml
docs/example_notebooks/: basic_example.ipynb
docs/notebooks/: html_tables_pandas.ipynb  ppa_tables_plottable_highlight.ipynb  table1.pickle  test_highlight_cell.ipynb  test_highlight_real_ppa_data.py
plottable/: cell.py  column_def.py  table.py
